fix (webapp_form_UI): Fix question text unnecessarily wrapping to next line

--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
@@ -31,6 +31,9 @@
   .form-group {
     padding-left: 25px;
     padding-right: 20px;
+    .caption.control-label{
+      display: block;
+    }
   }
 
   .panel-body {
